k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  type: NodePort
  selector:
    app: model-service
  ports:
  - port: 8000
    targetPort: 8000
